--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Quiz App</title>
   </head>
 <body>
-    
+  <div class="quiz-container" id="quiz">
+    <div class="quiz-header">
+      <h2 id="question">Question text</h2>
+      <ul>
+        <li>
+          <input type="radio" name="answer" id="a" class="answer">
+          <label for="a" id="a_text">Question</label>
+        </li>    
 </body>
 </html>
