--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <input type="radio" name="answer" id="a" class="answer">
           <label for="a" id="a_text">Question</label>
         </li> 
+        
         <li>
           <input type="radio" name="answer" id="b" class="answer">
           <label for="b" id="b_text">Question</label>
@@ -23,6 +24,11 @@
         <li>
           <input type="radio" name="answer" id="c" class="answer">
           <label for="c" id="c_text">Question</label>
-        </li>   
+        </li>
+    </ul>
+  </div>
+  <button id="submit">Submit</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
